Diakonos Changelog
------------------

0.9.8

- Handle symlink cycles when fuzzy file finding (file open)
- Fix language switch display bug

0.9.7
- Added ability to move lines up or down.
- Made compatible with Ruby 2.4.0.
- Handle closure of last buffer.
- Improve efficiency of fuzzy file find.

0.9.6
- Added Vue.js webpack syntax highlighting.
- Uninstallation no longer requires curses library.

0.9.5
- Added support for OSX clipboard.
- Fixed inability to use space when fuzzy file finding.

0.9.4
- Searching within a selection now highlights only within selection, and reports only the number of matches in the selection.
- Can now replace all within selection.
- Basic mouse support added.
- Indentation performance vastly improved.
- Some indentation bugs fixed.
- lang.languagename.indent.triggers added.
- For languages with comment closers, don't duplicate closers.

0.9.3

- Ruby 2.0 or higher now required.
- Tab completion of paths now uses session dir.
- save_backup_files setting (default false).
- Slightly improve render speed of some highlighted languages.
- Fuzzy file find no longer active when current input line is an absolute path (performance improvement).

0.9.2

- Fixed stale session bugs.
- Ruby 2.0.0 compatibility.
- colour.background setting.
- Fuzzy file find: Listing now sorted alphabetically.
- Now use by default the terminal's current/default background colour, including possible transparency.
- Support selection by Shift key with cursor movement.

0.9.1

- Added PKGBUILD to bash filemask.
- Fixed -m switch (open matching files).
- Fixed breakage of grepping through all buffers when some buffers are unnamed.
- Fixed bug that prevented type_character from working in macros.
- Fixed open_file bug caused by empty input.
- Fixed several display bugs.
- Added fuzzy_file_find.recursive option (default true).
- Fixed fuzzy_file_find.max_files.
- Improved efficiency of fuzzy file finder.
- Various updates to default syntax highlighting.

0.9.0
